--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
 div {
-    border: 1px solid black;
-    
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -13,34 +11,29 @@ div {
 }
 
 #header {
-    margin-top: 0;
-    
     height: 150px;
 }
 
 #navigation {
     float: left;
     
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 20px;
     
-    width: 160px;
+    width: 130px;
 }
 
 #content {
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 180px;
-    margin-bottom: 10px;
     
     padding: 10px;
     
-    width: 770px;
+    width: 780px;
+    min-height: 300px;
     
     overflow: hidden;
 }
 
 #footer {
-    margin: 0;
-    
     height: 80px;
 }
