--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Ubuntu;
+    src: url('fonts/Ubuntu-R.ttf');
+} 
+
 div {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -8,6 +13,8 @@ html {
     height: 100%;
     
     background: #F5F5F5;
+    
+    font-family: Ubuntu, Arial, sans-serif;
 }
 
 #container {
