--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,28 @@ html {
                                 #D6CDC5 93%,
                                 #F5F5F5 100%);
     color: #FFF;
+    text-align: right;
+}
+
+#header img {
+    float: left;
+    
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+#header h1 {
+    padding-top: 50px;
+    padding-right: 30px;
+    
+    font-size: 40px;
+}
+
+#header h2 {
+    padding-top: 10px;
+    padding-right: 50px;
+    
+    font-size: 20px;
 }
 
 #navigation {
