--- a/css/main.css
+++ b/css/main.css
@@ -152,6 +152,18 @@ html {
     font-size: 150%;
 }
 
+.blogg_post {
+    margin-bottom: 20px;
+}
+
+.post_footer {
+    margin-top: 10px;
+    padding: 10px;
+    
+    background-color: #EEE;
+    color: #333;
+}
+
 #footer {
     height: 80px;
     
