--- a/css/main.css
+++ b/css/main.css
@@ -39,33 +39,33 @@ html {
     height: 150px;
     
     background: #77216F;
-    background: linear-gradient(-70deg,
-                                #2C001E 0%,
-                                #5E2750 13%,
-                                #77216F 53%,
-                                #D6CDC5 93%,
-                                #F5F5F5 100%);
-    background: -webkit-radial-gradient(circle at right bottom,
-                                        #2C001E 0%,
-                                        #5E2750 13%,
-                                        #77216F 53%,
-                                        #D6CDC5 93%,
-                                        #F5F5F5 100%);
-    background: radial-gradient(circle at right bottom,
-                                #2C001E 0%,
-                                #5E2750 13%,
-                                #77216F 53%,
-                                #D6CDC5 93%,
-                                #F5F5F5 100%);
+    background-image: url("../pics/res.png");
+    background-image: url("../pics/res.png"),
+                      linear-gradient(-70deg,
+                                      #2C001E 0%,
+                                      #5E2750 13%,
+                                      #77216F 53%,
+                                      #D6CDC5 93%,
+                                      #F5F5F5 100%);
+    background-image: url("../pics/res.png"),
+                      -webkit-radial-gradient(circle at right bottom,
+                                              #2C001E 0%,
+                                              #5E2750 13%,
+                                              #77216F 53%,
+                                              #D6CDC5 93%,
+                                              #F5F5F5 100%);
+    background-image: url("../pics/res.png"),
+                      radial-gradient(circle at right bottom,
+                                      #2C001E 0%,
+                                      #5E2750 13%,
+                                      #77216F 53%,
+                                      #D6CDC5 93%,
+                                      #F5F5F5 100%);
+    background-repeat: no-repeat;
+    background-position: 10px 10px, 0 0;
+    
     color: #FFF;
     text-align: right;
-}
-
-#header img {
-    float: left;
-    
-    margin-top: 10px;
-    margin-left: 10px;
 }
 
 #header h1 {
