--- a/css/main.css
+++ b/css/main.css
@@ -205,9 +205,10 @@ th {
     font-size: 150%;
 }
 
-#content img {
+#content img, #content video {
     margin: 5px;
     
+    width: 99%;
     max-width: 600px;
 
     border: 5px solid white;
@@ -312,7 +313,42 @@ fieldset input[type=radio] {
 
 #footer p {
     padding-top: 50px;
+    padding-left: 150px;
     padding-right: 30px;
     
     text-align: right;
+}
+
+/**
+ * Medium layout, still same but the width shrinks with the window
+ */
+ 
+@media screen and (max-width: 960px) {
+    #container {
+        width: 100%;
+    }
+    
+    #content {
+        width: 81.25%;
+        margin-left: 18.75%;
+    }
+}
+ 
+@media screen and (max-width: 747px) {
+    #navigation {
+        width: 115px;
+    }
+    
+    #navigation ul li a {
+        padding-left: 3px;
+        background-image: none;
+    }
+}
+
+@media screen and (max-width: 614px) {
+    #content {
+        width: -webkit-calc(100% - 115px);
+        width: calc(100% - 115px);
+        margin-left: 115px;
+    }
 }
