--- a/css/main.css
+++ b/css/main.css
@@ -360,13 +360,52 @@ fieldset input[type=radio] {
  */
 
 @media screen and (max-width: 481px) {
+    #header {
+        height: 150px;
+        
+        background: #77216F;
+        background-image: linear-gradient(-70deg,
+                                          #2C001E 0%,
+                                          #5E2750 13%,
+                                          #77216F 53%,
+                                          #D6CDC5 93%,
+                                          #F5F5F5 100%);
+        background-image: -webkit-radial-gradient(circle at right bottom,
+                                                  #2C001E 0%,
+                                                  #5E2750 13%,
+                                                  #77216F 53%,
+                                                  #D6CDC5 93%,
+                                                  #F5F5F5 100%);
+        background-image: radial-gradient(circle at right bottom,
+                                          #2C001E 0%,
+                                          #5E2750 13%,
+                                          #77216F 53%,
+                                          #D6CDC5 93%,
+                                          #F5F5F5 100%);
+                                          
+        text-align: center;
+    }
+    
+    #header h1 {
+        padding-top: 30px;
+        padding-right: 0;
+    }
+    
+    #header h2 {
+        padding-right: 0;
+    }
+
     #navigation {
         margin: 20px 10%;
         width: 80%;
     }
     
     #navigation ul li {
-        border-left-width: 4px;
+        border-width: 8px;
+    }
+    
+    #navigation ul li+li {
+        border-top-width: 4px;
     }
     
     #navigation ul li a {
