--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,13 @@
 @font-face {
     font-family: Ubuntu;
     src: url('fonts/Ubuntu-R.ttf');
-} 
+}
 
-div {
+article, aside, figure, footer, header, hgroup, main, menu, nav, section {
+    display:block;
+}
+
+div, article, aside, figure, footer, header, hgroup, main, menu, nav, section {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -65,7 +69,7 @@ th {
  * Header rules
  */
 
-#header {
+header {
     height: 150px;
     
     background: #77216F;
@@ -98,14 +102,14 @@ th {
     text-align: right;
 }
 
-#header h1 {
+header h1 {
     padding-top: 50px;
     padding-right: 30px;
     
     font-size: 40px;
 }
 
-#header h2 {
+header h2 {
     padding-top: 10px;
     padding-right: 50px;
     
@@ -169,7 +173,7 @@ th {
  * Content rules
  */
 
-#content {
+main {
     margin-top: 20px;
     margin-left: 180px;
     
@@ -185,7 +189,7 @@ th {
     line-height: 110%;
 }
 
-#content h1 {
+main h1 {
     margin: 1em 0;
     
     color: #77216F;
@@ -195,11 +199,11 @@ th {
     line-height: 110%;
 }
 
-#content h1:first-child {
+main h1:first-child {
     margin-top: 0;
 }
 
-#content h2 {
+main h2 {
     margin: 1em 0;
     
     color: #77216F;
@@ -209,7 +213,7 @@ th {
     line-height: 110%;
 }
 
-#content img, #content video {
+main img, main video {
     margin: 5px;
     
     width: 99%;
@@ -230,7 +234,7 @@ th {
     font-weight: bold;
 }
 
-#content .right, .left {
+main .right, .left {
     max-width: 300px;
 }
 
@@ -304,7 +308,7 @@ fieldset input[type=radio] {
  * Footer rules
  */
 
-#footer {
+footer {
     height: 80px;
     
     background-image: url("pics/agpl.png");
@@ -315,7 +319,7 @@ fieldset input[type=radio] {
     color: #333;
 }
 
-#footer p {
+footer p {
     padding-top: 50px;
     padding-left: 150px;
     padding-right: 30px;
