--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -28,6 +28,7 @@ html {
     -webkit-box-shadow: -10px 10px 10px 10px rgba(0, 0, 0, 0.2);
     box-shadow: -10px 10px 10px 10px rgba(0, 0, 0, 0.2); 
     
+    transition: all 1.5s;
     transform:  rotate(5deg);
 }
 
