--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -1,7 +1,9 @@
 html {
     padding-top: 100px;
     padding-left: 100px;
-    
+
+    font-family: 'The Girl Next Door';
+
     background-color: #888;
 }
 
@@ -22,7 +24,6 @@ html {
     color: #242459;
     background-color: white;
     
-    font-family: 'The Girl Next Door';
     font-size: 2em;
     text-decoration: none;
     text-shadow: 4px 4px 4px rgba(0,0,0,0.2); 
@@ -125,6 +126,17 @@ html {
     width: 100%;
 }
 
+p {
+    position: fixed;
+    right: 10px;
+    bottom: 5px;
+    margin: 0;
+
+    color: white;
+    font-size: 1.8em;
+    text-shadow: 4px 4px 4px rgba(0,0,0,0.2);
+    transform: rotate(-3deg);
+}
 /**
  * Chrome support
  * Firefox does fine without any bendor prefixes so let us not clutter the code
